--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "prettier-plugin-import-sort": "^0.0.7",
     "vite": "^6.0.5"
   }
 }
