--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.3",
+    "react-sliding-pane": "^7.3.0",
     "recharts": "^2.15.0"
   },
   "devDependencies": {
