--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,10 @@
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.3",
+    "react-slick": "^0.30.3",
     "react-sliding-pane": "^7.3.0",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
