--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,7 @@
     "react-slick": "^0.30.3",
     "react-sliding-pane": "^7.3.0",
     "recharts": "^2.15.0",
-    "slick-carousel": "^1.8.1",
-    "workbox-webpack-plugin": "^7.3.0"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
