--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.3",
