Refactor API endpoints to use dynamic base URL and update Netlify configuration for redirects

--- a/server/netlify.toml
+++ b/server/netlify.toml
@@ -3,14 +3,7 @@
   functions = "netlify/functions"
   publish = "public"
 
-[functions]
-  external_node_modules = ["express", "cors", "dotenv"]
-  node_bundler = "esbuild"
-  included_files = ["Routes/", "public/"]
-
-
 [[redirects]]
-  from = "/*"
+  from = "/api/*"
   to = "/.netlify/functions/api/:splat"
   status = 200
-
