hosting db vkey value pairs updated

--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,5 @@ API_KEY=e28cd127-c818-4da9-9794-b3299beced4e
 SECRET_KEY=zHDMc^P~9J(fl[c_$Bq:Qi:v$ATKUd#6
 PORT=3000
 NODE_ENV=production 
+PG_HOST= dpg-cvasm0tsvqrc73c1sav0-a 
+PG_PORT=5432 
