Web Sessions Changes

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 DATABASE_URL=postgres://postgres:root@localhost:5432/postgres
 API_KEY=e28cd127-c818-4da9-9794-b3299beced4e
-SECRET_KEY=zHDMc^P~9J(fl[c_$Bq:Qi:v$ATKUd#6
+JWT_SECRET=zHDMc^P~9J(fl[c_$Bq:Qi:v$ATKUd#6
 PORT=3000
 NODE_ENV=production 
 PG_HOST= dpg-cvaugf2n91rc739bco30-a
