--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-slick": "^0.30.3",
     "react-sliding-pane": "^7.3.0",
     "recharts": "^2.15.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
