--- a/server/package.json
+++ b/server/package.json
@@ -20,13 +20,13 @@
     "path": "^0.12.7",
     "pg": "^8.13.3",
     "serverless-http": "^3.2.0",
+    "socket.io": "^4.8.1",
     "url": "^0.11.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
   },
   "engines": {
-  "node": "22.12.0"
-}
-
+    "node": "22.12.0"
+  }
 }
