--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,14 @@
-DATABASE_URL=postgres://postgres:root@localhost:5432/postgres
+# DATABASE_URL=postgres://postgres:root@localhost:5432/postgres
+# API_KEY=e28cd127-c818-4da9-9794-b3299beced4e
+# JWT_SECRET=zHDMc^P~9J(fl[c_$Bq:Qi:v$ATKUd#6
+# PORT=3000
+# NODE_ENV=production 
+# PG_HOST= dpg-cvaugf2n91rc739bco30-a
+# PG_PORT=5432 
+
+
+DATABASE_URL=postgresql://e11ipsis_user:ffgJTH7dmIRMigHcdf-JLZBRUGR2Ke6Ak@dpg-evaugf2n91rc739bco30-a.oregon-postgres.render.com:5432/e11ipsis
 API_KEY=e28cd127-c818-4da9-9794-b3299beced4e
 JWT_SECRET=zHDMc^P~9J(fl[c_$Bq:Qi:v$ATKUd#6
 PORT=3000
-NODE_ENV=production 
-PG_HOST= dpg-cvaugf2n91rc739bco30-a
-PG_PORT=5432 
+NODE_ENV=production
