--- a/server/.env
+++ b/server/.env
@@ -7,8 +7,10 @@
 # PG_PORT=5432 
 
 
-DATABASE_URL=postgresql://e11ipsis_user:ffgJTH7dmIRMigHcdf-JLZBRUGR2Ke6Ak@dpg-evaugf2n91rc739bco30-a.oregon-postgres.render.com:5432/e11ipsis
-API_KEY=e28cd127-c818-4da9-9794-b3299beced4e
-JWT_SECRET=zHDMc^P~9J(fl[c_$Bq:Qi:v$ATKUd#6
+DATABASE_URL=postgresql://ellipsis_user:ffgJTH7dmIRWHgHcdFJLZBRUGR2Kc0Ak@dpg-cvaugf2n91rc739bco30-a/ellipsis
+SECRET_KEY=zHDMc^P~9J(fl[c_$Bq:Qi:v$ATKUd#6
 PORT=3000
-NODE_ENV=production
+NODE_ENV=production 
+PG_HOST= dpg-cvaugf2n91rc739bco30-a
+PG_PORT=5432 
+#postgres://postgres:root@localhost:5432/postgres
