test 3 - add jwt key

--- a/server/.env
+++ b/server/.env
@@ -8,9 +8,9 @@
 
 
 DATABASE_URL=postgresql://ellipsis_user:ffgJTH7dmIRWHgHcdFJLZBRUGR2Kc0Ak@dpg-cvaugf2n91rc739bco30-a/ellipsis
-SECRET_KEY=zHDMc^P~9J(fl[c_$Bq:Qi:v$ATKUd#6
+JWT_SECRET=zHDMc^P~9J(fl[c_$Bq:Qi:v$ATKUd#6
 PORT=3000
 NODE_ENV=production 
-PG_HOST= dpg-cvaugf2n91rc739bco30-a
+PG_HOST=dpg-cvaugf2n91rc739bco30-a
 PG_PORT=5432 
 #postgres://postgres:root@localhost:5432/postgres
