--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "chart.js": "^4.4.8",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
@@ -18,6 +22,7 @@
     "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.3",
     "react-sliding-pane": "^7.3.0",
+    "react-to-print": "^3.0.5",
     "recharts": "^2.15.0",
     "slick-carousel": "^1.8.1"
   },
